Fix description overflow

--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ ul a, ul a:visited {
   margin-top: -240px;
   position: fixed;
   z-index: 1;
+  overflow: hidden;
   border-radius: 20px;
   box-shadow: 5px 5px 10px #888, -2px -2px 10px #888 inset, 3px 3px 10px #fff inset;
 }
@@ -73,8 +74,10 @@ ul a, ul a:visited {
 .details #desc {
   padding-left: 20px;
   padding-right: 20px;
+  width: 96%;
   height: 88px;
   margin: 0;
+  overflow-y: scroll;
 }
 .details #btm_x {
   background: url(btm_x.png);
